# apdb

./: .gitignore  LICENSE  README.md  pyproject.toml
apdb/: __init__.py  cli.py  debugger.py  protocol.py  server.py  skill_installer.py
apdb/bundled_skill/apdb/: SKILL.md
docs/superpowers/plans/: 2026-07-03-apdb-agent-debugger-implementation.md  2026-07-03-apdb-skill-install-implementation.md
docs/superpowers/specs/: 2026-07-03-apdb-agent-debugger-design.md  2026-07-03-apdb-skill-install-design.md
skills/apdb/: SKILL.md
tests/: test_cli.py  test_integration.py  test_package_metadata.py  test_protocol.py  test_skill.py  test_skill_installer.py
