[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "apdb"
version = "0.1.1"
description = "Agent-friendly remote Python debugger over a zero-dependency TCP API"
readme = "README.md"
requires-python = ">=3.8"
license = "BSD-2-Clause"
authors = [
  {name = "apdb contributors"}
]
keywords = ["debugger", "pdb", "agent", "tcp", "remote-debugger"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Debuggers",
]
dependencies = []
license-files = ["LICENSE"]

[project.scripts]
apdb_cli = "apdb.cli:main"

[tool.setuptools]
packages = ["apdb", "apdb.bundled_skill", "apdb.bundled_skill.apdb"]

[tool.setuptools.package-data]
apdb = ["bundled_skill/apdb/SKILL.md"]
